<resources>
    <string name="app_name">SwipeAssist</string>
    <string name="title_activity_hamburger_menu">HamburgerMenu</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="get_advice">Get advice</string>
    <string name="give_advice">Give advice</string>
    <string name="view_advice">View advice</string>
    <string name="settings">Settings</string>
    <string name="startup_get">Need a helping hand?</string>
    <string name="startup_give">In a helping mood?</string>
    <string name="startup_view">Want prior feedback?</string>
    <string name="feedback">Feedback</string>
    <string name="feedbackQ">Detailed feedback to give:</string>
    <string name="enter_advice">Enter your advice here</string>
    <string name="sign_out">Sign out</string>
    <string name="name_label">First Name</string>
    <string name="occasion_label">Occasion</string>
    <string name="occasion_prompt">What specific event are you attending? Some examples: wedding, bar mitzvah, job interview, etc. You can also just put \"fashion\" for general fashion advice.</string>
    <string name="spinner_text">Category</string>
    <string name="category_label">Category</string>
    <string name="name_text_label">Name</string>
    <string name="upload_picture_prompt">Upload your picture here!</string>
    <string name="image_preview">Image Preview</string>
    <string name="upload_info">Upload!</string>
</resources>
