<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        >
        <TextView
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:text="@string/startup_get"
            android:gravity="center"
            />
        <Button
            android:layout_height="75dp"
            android:layout_width="100dp"
            android:text="@string/get_advice"
            android:id="@+id/get_button"
            android:onClick="buttonClicked"
            />
        <TextView
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:text="@string/startup_give"
            android:gravity="center"
            />
        <Button
            android:layout_height="75dp"
            android:layout_width="100dp"
            android:text="@string/give_advice"
            android:id="@+id/give_button"
            android:onClick="buttonClicked"
            />
        <TextView
            android:layout_width="150dp"
            android:layout_height="75dp"
            android:text="@string/startup_view"
            android:gravity="center"
            />
        <Button
            android:layout_height="75dp"
            android:layout_width="100dp"
            android:text="@string/view_advice"
            android:id="@+id/view_button"
            android:onClick="buttonClicked"
            />
    </LinearLayout>

</android.support.constraint.ConstraintLayout>